<resources>
    <string name="app_name">Football Counter</string>
    <string name="action_settings">action_settings</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="zero">0</string>
    <string name="plus1">+1</string>
    <string name="plus2">+2</string>
    <string name="touchdown">Touchdown</string>
    <string name="fieldGoal">Field Goal</string>
    <string name="reset">Reset</string>

</resources>
